Securiser les liens des fichiers de preinscription
